add usernameoption for addAdminmenu

--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="okaybutton" (click)="pressokaybutton()">
-        OKAY
+        <div class="okay_txt">OKAY</div>
       </div>
 
     </div>
