--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -35,20 +35,33 @@
   <div class="txt_field">
     <input type="text" required
            [value]="this.newadminadress"
-           (change)="setUsernameofnewAdmin($event)"
+           (change)="setUseradressofnewAdmin($event)"
     >
     <span></span>
     <label>Email</label>
   </div>
 
   <div class="txt_field">
-    <input type="password" required
+    <input type="text" required
            [value]="this.newadminpassword"
            (change)="setpasswortofnewAdmin($event)"
     >
     <span></span>
     <label>Password</label>
   </div>
+
+
+  <div class="txt_field">
+    <input type="text" required
+           [value]="this.newadminusername"
+           (change)="setUsernameofnewAdmin($event)"
+    >
+    <span></span>
+
+    <label>Username</label>
+
+  </div>
+
 
 
   <div class="add" (click)="sendAddAdminrequest()">
@@ -82,6 +95,8 @@
 </div>
 
 
+
+
 <div class="changePassword" *ngIf="changePassword">
   <div class="headline">Change Password</div>
 
@@ -101,12 +116,6 @@
     <div class="cancel_txt">Cancel</div>
   </div>
 </div>
-
-
-
-
-
-
 
 
 <div class="newVoteButton">
