--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -24,9 +24,12 @@
 
 
 <div class="listwindow">
-  <div class="headline">Your Votes</div>
+  <div class="background" >
+    <div class="headline">Your Votes</div>
 
-  <voteContainer></voteContainer>
+    <voteContainer></voteContainer>
+  </div>
+
 </div>
 
 <div class="adminGenerator" *ngIf="addAdmin">
