--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -15,12 +15,36 @@
   width: 70%;
   height: 80%;
   top: 15%;
+
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
+  border-radius: 15px 15px 15px 15px;
+
+
 }
+
+/*
+background:  linear-gradient(to right, red, purple);
+.listwindow .background{
+  text-align: center;
+  font-size: 40px;
+  position: fixed;
+  right: 15.3%;
+  background-color: rgba(239, 238, 238, 1);
+  width: 69.4%;
+  height: 79%;
+  top: 15.5%;
+
+}
+
+ */
 .headline{
-  background: #ff8200;
-  border-radius: 36px 36px 0px 0px;
+  background: rgba(255, 130, 0, 0.89);
+
+
+
+  border-radius: 10px 10px 0px 0px;
+
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: white;
   font-weight: 600;
@@ -63,7 +87,7 @@
   height: 55%;
   top: 25%;
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
+  border-radius: 15px 15px 15px 15px;
 }
 
 .adminGenerator .txt_field{
@@ -129,7 +153,7 @@
   right: 34%;
   width: 10%;
   background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
+  border-radius: 5px 5px 5px 5px;
 }
 
 .adminGenerator .add_txt{
@@ -158,7 +182,10 @@
 }
 
 .adminGenerator .cancel_txt:hover{
+
   border-radius: 40px 40px 40px 40px;
+
+
   border-color: #ea7609;
   border-width: 10px;
   background: #ea7609;
@@ -212,7 +239,8 @@
   height: 30%;
   top: 25%;
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
+
+  border-radius: 15px 15px 15px 15px;
 }
 
 
@@ -336,7 +364,8 @@
   height: 30%;
   top: 25%;
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
+
+  border-radius: 15px 15px 15px 15px;
 }
 
 
