--- a/frontend/src/lib/question/question.component.css
+++ b/frontend/src/lib/question/question.component.css
@@ -5,6 +5,8 @@
   text-align: center;
   margin-top: 10px;
   margin-right: 10px;
+  align-content: center;
+  align-items: center;
 }
 .questiontitle{
   background-color: transparent;
@@ -16,62 +18,48 @@
   cursor: pointer;
   width: 400px;
   height: auto;
-  border-color: transparent;
-}
-/*.answer-selector input{*/
-/*  margin:0;padding:0;*/
-/*  -webkit-appearance:none;*/
-/*  -moz-appearance:none;*/
-/*  appearance:none;*/
-/*}*/
-/*.yesNo{background-image:url('../../assets/yesNo_button.png');}*/
-/*.fixed{background-image:url('../../assets/fixedAnswers_button.png');}*/
+  border-color: gray;
+  border-radius: 40px 40px 40px 40px;
 
-/*.answer-selector input:active +.answerbutton{opacity: .9;}*/
-/*.answer-selector input:checked +.answerbutton{*/
-/*  -webkit-filter: none;*/
-/*  -moz-filter: none;*/
-/*  filter: none;*/
-/*}*/
-/*.answerbutton{*/
-/*  cursor:pointer;*/
-/*  background-size:contain;*/
-/*  background-repeat:no-repeat;*/
-/*  display:inline-block;*/
-/*  width:100px;height:70px;*/
-/*  -webkit-transition: all 100ms ease-in;*/
-/*  -moz-transition: all 100ms ease-in;*/
-/*  transition: all 100ms ease-in;*/
-/*  -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);*/
-/*  -moz-filter: brightness(1.8) grayscale(1) opacity(.7);*/
-/*  filter: brightness(1.8) grayscale(1) opacity(.7);*/
-/*}*/
-/*.answerbutton:hover{*/
-/*  -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);*/
-/*  -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);*/
-/*  filter: brightness(1.2) grayscale(.5) opacity(.9);*/
-/*}*/
+}
 .answerTypeButton{
   margin-left: 5px;
   margin-right: 5px;
-    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
-    -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
-    filter: brightness(1.2) grayscale(.5) opacity(.9);
+  -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
+  -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
+  filter: brightness(1.2) grayscale(.5) opacity(.9);
+  width: 200px;
 }
 .answerlist{
-  list-style: none;
-  align-items: center;
+  /*list-style: none;*/
+  /*align-items: center;*/
+  width: 30%;
+  /*margin-inline: auto;*/
+  /*margin-bottom: 5%;*/
 }
 .answerstyle{
   font-size: 20px;
-  border: 3px solid #ea7609;
+  border: 3px;
   border-radius: 40px 40px 40px 40px;
 }
 
-input[id=yesNo]:checked {
+.answerTypeButton:hover {
+  margin-left: 5px;
+  margin-right: 5px;
+  -webkit-filter: brightness(1.1) grayscale(.2) opacity(.95);
+  -moz-filter: brightness(1.1) grayscale(.2) opacity(.95);
+  filter: brightness(1.1) grayscale(.2) opacity(.95);
+}
+input[type="image"]:focus{
   margin-left: 5px;
   margin-right: 5px;
   -webkit-filter: none;
   -moz-filter: none;
   filter: none;
+}
+.inputfield{
+  font-size: 15px;
+  height: 20px;
+  border-radius: 40px 40px 40px 40px;
+  border: 3px solid #ea7609;
 }
