--- a/frontend/src/lib/question/question.component.html
+++ b/frontend/src/lib/question/question.component.html
@@ -4,7 +4,7 @@
 
 
 <div id="body">
-  <form>
+  <form id="questionSelect">
     <mat-radio-group aria-label="Select an option">
       <mat-radio-button value="1" (click)="chooseYesNoAnswer()" >Yes/No  Answer</mat-radio-button>
       <mat-radio-button value="2" (click)="chooseFixedAnswers()">Fixed Answer</mat-radio-button>
