--- a/frontend/src/lib/survey-question/survey-question.component.html
+++ b/frontend/src/lib/survey-question/survey-question.component.html
@@ -25,10 +25,9 @@
 
   <section class="customAnswer" *ngIf="this.question.individualAnswer!=undefined">
     <mat-form-field>
-      <input matInput placeholder="Your Answer" formControlName="customAnswer">
+      <input matInput placeholder="Your Answer">
     </mat-form-field>
   </section>
-
 
 </div>
 
