--- a/frontend/src/lib/router/editor/editor.component.scss
+++ b/frontend/src/lib/router/editor/editor.component.scss
@@ -1,10 +1,3 @@
-.Info{
-  top: 50%;
-  color: red;
-}
-.body{
-  color: white;
-}
 
 .questionwindow  {
   text-align: center;
@@ -13,16 +6,15 @@
   left:40%;
   background-color: rgba(239, 238, 238, 1);
   width: 50%;
-  height: 25%;
+  height: auto;
   top: 15%;
-  border: 3px solid #ea7609;
+  border: 3px solid #2691d9;
   border-radius: 40px 40px 40px 40px;
   align-items: flex-end;
 }
 .sidebar{
   text-align: center;
-  font-size: 30px;
-  position: fixed;
+  position: absolute;
   left:2%;
   background-color: rgba(239, 238, 238, 1);
   width: 30%;
@@ -31,6 +23,29 @@
   border: 3px solid #ea7609;
   border-radius: 40px 40px 40px 40px;
   align-items: center;
+}
+
+#head{
+  margin-top: 1vh;
+  margin-bottom: 4vh;
+  position: relative;
+}
+
+#questionList{
+  position: relative;
+  align-items: center ;
+
+}
+
+#questionList ul li {
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  background-color: white;
+  list-style: none;
+  align-items: flex-start;
+  width: 20vw;
 }
 
 
@@ -58,20 +73,6 @@
 
 }
 
-.nameinputfield{
-  text-align: center;
-  font-size: 20px;
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
-  background-color: rgba(239, 238, 238, 1);
-  width: 400px;
-  height: 20px;
-  //top: 15%;
-  border-radius: 40px 40px 40px 40px;
-}
-
-
 .addButton {
   height: 0px;
   align-items: center;
@@ -83,43 +84,17 @@
 }
 
 .label{
-  font-size: 20px;
+
   position: center;
-  font-weight: bold;
 }
 
-.inputfield{
-  margin-left: 40px;
-  font-size: 15px;
-  height: 20px;
-  width: 200px;
-  border-radius: 40px 40px 40px 40px;
-  border: 3px solid #ea7609;
 
-
-}
-.questionlist{
-  background-color: rgba(239, 238, 238, 1);
-  list-style: none;
-  align-items: flex-start;
-}
 .questioneditor{
   background-color: rgba(239, 238, 238, 1);
   list-style: none;
 }
-.questiontitle{
-  background-color: transparent;
-  font-size: 25px;
-  font-weight: bold;
-  border: 3px solid #ea7609;
-  border-radius: 40px 40px 40px 40px;
-  text-align: center;
-  margin-top: 10px;
-  margin-right: 10px;
-  cursor: pointer;
-  width: auto;
-  height: auto;
-}
+
+
 .emaillist{
   list-style: none;
   align-items: center;
