--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -6,7 +6,7 @@
   color: white;
 }
 
-.questionwindow  {
+.listwindow  {
   text-align: center;
   font-size: 40px;
   position: fixed;
@@ -17,6 +17,7 @@
   top: 15%;
 
   border: 3px solid #ff8200;
+  border-radius: 40px 40px 40px 40px;
   border-radius: 15px 15px 15px 15px;
 
 
@@ -38,6 +39,8 @@ background:  linear-gradient(to right, red, purple);
 
  */
 .headline{
+  background: #ff8200;
+  border-radius: 36px 36px 0px 0px;
   background: rgba(255, 130, 0, 0.89);
 
 
@@ -50,7 +53,7 @@ background:  linear-gradient(to right, red, purple);
   font-weight: 600;
 }
 
-.newQuestionButton {
+.newVoteButton {
   text-align: center;
   position: absolute;
   right: 5%;
@@ -161,20 +164,20 @@ background:  linear-gradient(to right, red, purple);
   font-size: 30px;
 }
 .adminGenerator .add:hover{
-   border-color: #ea7609;
-   border-width: 10px;
-   background: #ea7609;
-   transition: .5s;
- }
+  border-color: #ea7609;
+  border-width: 10px;
+  background: #ea7609;
+  transition: .5s;
+}
 .adminGenerator .cancel{
-    color: white;
-    position: fixed;
-    top: 75%;
-    left: 34%;
-    width: 10%;
-    background: #2691d9;
-    border-radius: 40px 40px 40px 40px;
-  }
+  color: white;
+  position: fixed;
+  top: 75%;
+  left: 34%;
+  width: 10%;
+  background: #2691d9;
+  border-radius: 40px 40px 40px 40px;
+}
 
 .adminGenerator .cancel_txt{
   color: white;
@@ -239,6 +242,7 @@ background:  linear-gradient(to right, red, purple);
   height: 30%;
   top: 25%;
   border: 3px solid #ff8200;
+  border-radius: 40px 40px 40px 40px;
 
   border-radius: 15px 15px 15px 15px;
 }
@@ -364,9 +368,19 @@ background:  linear-gradient(to right, red, purple);
   height: 30%;
   top: 25%;
   border: 3px solid #ff8200;
-
   border-radius: 15px 15px 15px 15px;
 }
+
+
+.changePassword .txt_field {
+  position: relative;
+  top: 5%;
+  border-bottom: 2px solid #adadad;
+  margin: 50px 0;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 
 
 .changePassword .txt_field{
@@ -388,7 +402,7 @@ background:  linear-gradient(to right, red, purple);
   outline: none;
 }
 
-/*Password label*/
+/*Username and Password label*/
 .changePassword .txt_field label{
   position: absolute;
   top: 50%;
@@ -461,13 +475,12 @@ background:  linear-gradient(to right, red, purple);
   color: white;
   font-size: 30px;
 }
-
-
-.changePassword .cancel_txt:hover{
-  border-radius: 40px 40px 40px 40px;
+.changePassword .cancel:hover{
   border-color: #ea7609;
   border-width: 10px;
   background: #ea7609;
   transition: .5s;
+
 }
-/*ChangePassword WINDOW*/
+
+/*Change Password window*/
