reset login component to current main branch state

--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -11,28 +11,6 @@
     <div class="loginfield" >
       <div id="loginwindow">
         <p>Login to your account</p>
-
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <div class="container">
-
-            <mat-form-field>
-              <input matInput placeholder="Email" formControlName="email">
-              <mat-hint *ngIf="loginForm.controls.email.errors">Email is required</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input matInput placeholder="Password" type="password" formControlName="password">
-              <mat-hint *ngIf="loginForm.controls.password.errors">Password is required</mat-hint>
-            </mat-form-field>
-
-            <button mat-flat-button color="primary" [disabled]="!loginForm.valid" type="submit">Login</button>
-
-          </div>
-        </form>
-
-
-
-<!--
         <div class="txt_field">
           <input type="text" required
                  [value]="this.username"
@@ -52,7 +30,6 @@
         <div class="helpbutton" (click)="presshelpbutton()"> Need help?</div>
         <input type="submit" value="Login"  (click)="submitlogin()" routerLink="/main">
       </div>
-      -->
 
     </div>
 
@@ -65,7 +42,7 @@
       </div>
 
       <div class="okaybutton" (click)="pressokaybutton()">
-        OKAY
+        <div class="okay_txt">OKAY</div>
       </div>
 
     </div>
@@ -75,3 +52,4 @@
   </div>
 <!-- </body>
 </html> -->
+y
