--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -17,10 +17,7 @@
   top: 15%;
 
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
   border-radius: 15px 15px 15px 15px;
-
-
 }
 
 /*
@@ -39,18 +36,17 @@ background:  linear-gradient(to right, red, purple);
 
  */
 .headline{
+  height: 35px;
   background: #ff8200;
-  border-radius: 36px 36px 0px 0px;
   background: rgba(255, 130, 0, 0.89);
-
-
-
   border-radius: 10px 10px 0px 0px;
-
-
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: white;
   font-weight: 600;
+}
+
+.headline .headline_txt{
+  text-align: center;
 }
 
 .newVoteButton {
@@ -127,7 +123,7 @@ background:  linear-gradient(to right, red, purple);
 .adminGenerator .txt_field span::before{
   content: "";
   position: absolute;
-  top: 53px;
+  top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
@@ -161,7 +157,7 @@ background:  linear-gradient(to right, red, purple);
 
 .adminGenerator .add_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 .adminGenerator .add:hover{
   border-color: #ea7609;
@@ -181,7 +177,7 @@ background:  linear-gradient(to right, red, purple);
 
 .adminGenerator .cancel_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .adminGenerator .cancel_txt:hover{
@@ -242,8 +238,6 @@ background:  linear-gradient(to right, red, purple);
   height: 30%;
   top: 25%;
   border: 3px solid #ff8200;
-  border-radius: 40px 40px 40px 40px;
-
   border-radius: 15px 15px 15px 15px;
 }
 
@@ -285,7 +279,7 @@ background:  linear-gradient(to right, red, purple);
 .deleteAdmin .txt_field span::before{
   content: "";
   position: absolute;
-  top: 53px;
+  top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
@@ -319,7 +313,7 @@ background:  linear-gradient(to right, red, purple);
 
 .deleteAdmin .delete_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 .deleteAdmin .delete:hover{
   border-color: #ea7609;
@@ -340,7 +334,7 @@ background:  linear-gradient(to right, red, purple);
 
 .deleteAdmin .cancel_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 
@@ -418,7 +412,7 @@ background:  linear-gradient(to right, red, purple);
 .changePassword .txt_field span::before{
   content: "";
   position: absolute;
-  top: 53px;
+  top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
@@ -452,7 +446,7 @@ background:  linear-gradient(to right, red, purple);
 
 .changePassword .change_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 .changePassword .change:hover{
   border-color: #ea7609;
@@ -473,7 +467,7 @@ background:  linear-gradient(to right, red, purple);
 
 .changePassword .cancel_txt{
   color: white;
-  font-size: 30px;
+  font-size: 20px;
 }
 .changePassword .cancel:hover{
   border-color: #ea7609;
