--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -25,7 +25,9 @@
 
 <div class="listwindow">
   <div class="background" >
-    <div class="headline">Your Votes</div>
+    <div class="headline">
+        Your Votes
+      </div>
 
     <voteContainer></voteContainer>
   </div>
