some modifications on encryption and editor

--- a/frontend/src/lib/router/editor/editor.component.html
+++ b/frontend/src/lib/router/editor/editor.component.html
@@ -34,7 +34,7 @@
           <div class="questiontitle" (click)="this.next = false; showQuestion(question)">
             {{question.title}}
 
-            <button id="delte" mat-icon-button (click)="deleteQuestion(question)">
+            <button id="delete" mat-icon-button (click)="deleteQuestion(question)">
               <mat-icon>delete</mat-icon>
             </button>
 
