--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -147,49 +147,21 @@ background:  linear-gradient(to right, red, purple);
 .adminGenerator .add{
   color: white;
   position: fixed;
-  top: 75%;
+  top: 73%;
   right: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 5px 5px 5px 5px;
 }
 
-.adminGenerator .add_txt{
-  color: white;
-  font-size: 20px;
-}
-.adminGenerator .add:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
+
 .adminGenerator .cancel{
   color: white;
   position: fixed;
-  top: 75%;
+  top: 73%;
   left: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
 }
 
-.adminGenerator .cancel_txt{
-  color: white;
-  font-size: 20px;
-}
-
-.adminGenerator .cancel_txt:hover{
-
-  border-radius: 40px 40px 40px 40px;
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
 /*Add Admin page*/
-
-
 
 
 .taskbar{
@@ -202,6 +174,7 @@ background:  linear-gradient(to right, red, purple);
   color: white;
 
 }
+
 
 /*DELETE WINDOW*/
 .deleteAdmin{
@@ -275,47 +248,19 @@ background:  linear-gradient(to right, red, purple);
 .deleteAdmin .delete{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   right: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
-}
-
-.deleteAdmin .delete_txt{
-  color: white;
-  font-size: 20px;
-}
-.deleteAdmin .delete:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
 }
 
 .deleteAdmin .cancel{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   left: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
 }
 
-.deleteAdmin .cancel_txt{
-  color: white;
-  font-size: 20px;
-}
-
-
-.deleteAdmin .cancel_txt:hover{
-  border-radius: 40px 40px 40px 40px;
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
 /*DELETE WINDOW*/
 
 
@@ -401,50 +346,24 @@ background:  linear-gradient(to right, red, purple);
 .changePassword .change{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   right: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
-}
-
-.changePassword .change_txt{
-  color: white;
-  font-size: 20px;
-}
-.changePassword .change:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
 }
 
 .changePassword .cancel{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   left: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
 }
-
-.changePassword .cancel_txt{
-  color: white;
-  font-size: 20px;
-}
-.changePassword .cancel:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
-/*Change Password window*/
+/*ChangePassword window*/
 
 
 
 
-/*ChangeUsername WINDOW*/
+/*ChangeUsername window*/
 .changeUsername{
   text-align: center;
   font-size: 40px;
@@ -523,44 +442,21 @@ background:  linear-gradient(to right, red, purple);
 .changeUsername .change{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   right: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
 }
 
-.changeUsername .change_txt{
-  color: white;
-  font-size: 20px;
-}
-.changeUsername .change:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
+
 
 .changeUsername .cancel{
   color: white;
   position: fixed;
-  top: 50%;
+  top: 47%;
   left: 34%;
   width: 10%;
-  background: #2691d9;
-  border-radius: 40px 40px 40px 40px;
 }
 
-.changeUsername .cancel_txt{
-  color: white;
-  font-size: 20px;
-}
-.changeUsername .cancel:hover{
-  border-color: #ea7609;
-  border-width: 10px;
-  background: #ea7609;
-  transition: .5s;
-}
 
 
 
@@ -662,6 +558,3 @@ background:  linear-gradient(to right, red, purple);
   right: 10%;
   cursor: pointer;
 }
-
-
-
