--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,7 +18,7 @@
       <input type="image" src="../assets/user_icon2.png" width="40%" height="40%">
     </div>
 
-    <h1> {{getusername()}}</h1>
+    <h1>Max Mustermann</h1>
   </div>
 
 
