attempt at implementing getSessionID Current Problem: No 'access-control-allow-origin' header

--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -16,3 +16,5 @@
     <button mat-flat-button color="primary" (click)="submitSurvey()">Submit</button>
   </div>
 
+
+<button mat-flat-button color="primary" (click)="debug()">Debug</button>
