fix login without enter any data add update Sessionid methode

--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -28,7 +28,7 @@
           <label>Password</label>
         </div>
         <div class="helpbutton" (click)="presshelpbutton()"> Need help?</div>
-        <input type="submit" value="Login"  (click)="submitlogin()" routerLink="/main">
+        <input type="submit" value="Login"  (click)="submitlogin()">
       </div>
 
     </div>
