--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -11,38 +11,43 @@
   font-size: 40px;
   position: fixed;
   right: 15%;
+
+  /*Alternative glass design
+  background: rgba(38, 145, 217, 0.39);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.9px);
+  -webkit-backdrop-filter: blur(3.9px);
+  border: 1px solid rgba(38, 145, 217, 1);
+ */
+
   background-color: rgba(239, 238, 238, 1);
+  border: 3px solid #ff8200;
+  border-radius: 15px 15px 15px 15px;
   width: 70%;
   height: 80%;
   top: 15%;
 
-  border: 3px solid #ff8200;
-  border-radius: 15px 15px 15px 15px;
-}
-
-/*
-background:  linear-gradient(to right, red, purple);
-.listwindow .background{
-  text-align: center;
-  font-size: 40px;
-  position: fixed;
-  right: 15.3%;
-  background-color: rgba(239, 238, 238, 1);
-  width: 69.4%;
-  height: 79%;
-  top: 15.5%;
 
 }
 
- */
 .headline{
   height: 35px;
+
+  /*Alternative Glass Design
+  background: rgba(3, 0, 255, 0.39);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.9px);
+  -webkit-backdrop-filter: blur(3.9px);
+  border: 1px solid rgba(3, 0, 255, 1);
+  */
   background: #ff8200;
-  background: rgba(255, 130, 0, 0.89);
   border-radius: 10px 10px 0px 0px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: white;
   font-weight: 600;
+  font-size: 25px;
 }
 
 .headline .headline_txt{
