connect Delete Surveyleader with backend

--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -13,11 +13,11 @@
         <div class="headline">Login to your account</div>
         <div class="txt_field">
           <input type="text" required
-                 [value]="this.username"
+                 [value]="this.userEmail"
                  (change)="setUsername($event)"
           >
           <span></span>
-          <label>Username</label>
+          <label>Email</label>
         </div>
         <div class="txt_field">
           <input type="password" required
