--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -87,6 +87,12 @@
 
   </div>
 
+    <mat-checkbox (change)="setadmin()">
+      <div class="isadmin_txt">isAdmin?</div>
+    </mat-checkbox>
+
+
+
   <div class="add" (click)="sendAddAdminrequest()">
     <button mat-flat-button color="primary" (click)="sendAddAdminrequest()"> Add </button>
   </div>
