--- a/frontend/src/lib/router/login/login.component.html
+++ b/frontend/src/lib/router/login/login.component.html
@@ -5,7 +5,7 @@
   <title>login</title>
 </head>
 <body> -->
-  <div class="body">
+<div class="body">
 
     <!-- Loginwindow -->
     <div class="loginfield" >
@@ -29,6 +29,10 @@
         </div>
         <div class="helpbutton" (click)="presshelpbutton()"> Need help?</div>
         <input type="submit" value="Login"  (click)="submitlogin()">
+        <div class="loading" *ngIf="showloadingstatus">
+          <mat-spinner [diameter]="40"></mat-spinner>
+        </div>
+
       </div>
 
     </div>
